<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="RegistrationActivity"
    android:background="#d3e0ea"
    >

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:hint="@string/full_name"
        android:layout_marginTop="120dp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:textSize="22sp"
        android:padding="5dp"

        />
    <EditText
        android:id="@+id/editTextUserNameRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:hint="@string/user_name"
        android:textSize="22sp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/editTextFullName"
        android:padding="4dp"
        android:inputType="textEmailAddress"
        />
    <EditText
        android:id="@+id/editTextPasswordRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_edittext"
        android:hint="@string/password"
        android:textSize="22sp"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="40dp"
        android:padding="4dp"
        android:layout_below="@+id/editTextUserNameRegistration"
        android:inputType="numberPassword"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/create_account"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#d3e0ea"
        android:layout_below="@+id/checkboxUser"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="33dp"
        android:layout_marginTop="10dp"
        />
    <CheckBox
        android:id="@+id/checkboxUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user"
        android:layout_marginStart="33dp"
        android:layout_below="@+id/editTextPasswordRegistration"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        />
    <CheckBox
        android:id="@+id/checkboxAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin"
        android:layout_below="@+id/editTextPasswordRegistration"
        android:layout_toEndOf="@+id/checkboxUser"
        android:layout_marginStart="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        />

</RelativeLayout>