<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"

        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <EditText
                android:id="@+id/editTextBuildName"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/buildName"
                android:textSize="22sp"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="?attr/actionBarSize"
                android:padding="4dp"
                android:lines="1"
                android:drawableLeft="@drawable/ic_build_name"
                android:drawablePadding="3dp"
                />
            <EditText
                android:id="@+id/editTextBuildAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="5"
                android:background="@drawable/custom_edittext"
                android:hint="@string/address"
                android:textSize="22sp"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"
                android:layout_below="@+id/editTextBuildName"

                android:gravity="top"
                android:drawableLeft="@drawable/ic_house"
                android:drawablePadding="3dp"
                />

            <EditText
                android:id="@+id/editTextCost"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/cost"
                android:textSize="22sp"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                android:layout_below="@+id/editTextBuildAddress"
                android:lines="1"

                android:drawableLeft="@drawable/ic_cost"
                android:drawablePadding="3dp"
                />
            <EditText
                android:id="@+id/editTextManagerName"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/manager_name"
                android:textSize="22sp"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="10dp"
                android:lines="1"
                android:padding="4dp"
                android:layout_below="@+id/editTextCost"

                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="3dp"
                />
            <EditText
                android:id="@+id/editTextManagerNumber"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/manager_number"
                android:textSize="22sp"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                android:lines="1"
                android:layout_below="@+id/editTextManagerName"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="3dp"
                />

            <EditText
                android:id="@+id/editTextManagerAddress"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/manager_address"
                android:textSize="22sp"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                android:layout_below="@+id/editTextManagerNumber"
                android:drawableLeft="@drawable/ic_house"
                android:drawablePadding="3dp"
                android:lines="1"
                />
            <EditText
                android:id="@+id/editTextEmployeeName"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/employee_name"
                android:textSize="22sp"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                android:layout_below="@+id/editTextManagerAddress"
                android:drawableLeft="@drawable/ic_user"
                android:drawablePadding="3dp"
                android:lines="1"
                />
            <EditText
                android:id="@+id/editTextEmployeeNumber"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:background="@drawable/custom_edittext"
                android:hint="@string/employee_number"
                android:textSize="22sp"
                android:layout_marginStart="33dp"
                android:layout_marginEnd="33dp"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                android:layout_below="@+id/editTextEmployeeName"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="3dp"
                android:lines="1"
                />

            <EditText
                android:id="@+id/editTextContractDate"
                android:layout_width="wrap_content"
                android:layout_height="38dp"

                android:background="@drawable/custom_edittext"
                android:layout_below="@+id/editTextEmployeeNumber"
                android:hint="@string/date_of_contract"
                android:textSize="22sp"
                android:layout_marginStart="33dp"
                android:layout_marginTop="10dp"
                android:padding="4dp"
                android:drawableLeft="@drawable/ic_build_name"
                android:lines="1"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonBuildSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextContractDate"
                android:background="@drawable/button_background"
                android:text="@string/save"
                android:layout_marginTop="10dp"
                android:layout_marginStart="33dp"

                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextEmployeeNumber"
                android:layout_toRightOf="@+id/editTextContractDate"
                android:text="@string/date"
                android:background="@drawable/button_background"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="2dp"
                />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>

