<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    >

 <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbarBuildDetail"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#1687a7"
     app:titleMarginStart="15dp"
     />

 <androidx.appcompat.widget.AppCompatButton
     android:id="@+id/buttonMakeService"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="15dp"
     android:layout_marginTop="10dp"
     android:layout_marginEnd="15dp"
     android:background="@drawable/button_background"
     android:drawableStart="@drawable/ic_service"
     android:paddingStart="20dp"
     android:text="@string/make_service"
     />

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="15dp"
  >
  <RelativeLayout
      android:padding="10dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/textInputLayoutAdmin"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
       app:startIconDrawable="@drawable/ic_service"
       android:hint="@string/please_selected"
       >
    <AutoCompleteTextView
        android:id="@+id/autoCompleteSpinnerAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:lines="1"
        />

   </com.google.android.material.textfield.TextInputLayout>

   <TextView
       android:id="@+id/textAdminBuildName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Apartman ismi:"
       android:textSize="13sp"
       android:layout_below="@+id/textInputLayoutAdmin"
       android:layout_marginTop="23dp"
       android:layout_marginStart="10dp"
       android:textColor="@color/black"
       />
   <TextView
       android:id="@+id/textViewBuildDetailBuildName"
       android:layout_width="match_parent"
       android:layout_height="38dp"
       android:layout_below="@+id/textAdminBuildName"
       android:hint="@string/buildName"
       android:textSize="22sp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="33dp"
       android:paddingStart="10dp"
       android:paddingTop="3dp"
       />
   <TextView
       android:id="@+id/textAdminAddress"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Adres:"
       android:layout_below="@+id/textViewBuildDetailBuildName"
       android:textSize="13sp"
       android:layout_marginTop="5dp"
       android:layout_marginStart="10dp"
       android:textColor="@color/black"
       />
   <TextView
       android:id="@+id/textViewBuildDetailBuildAddress"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:lines="5"
       android:background="@drawable/text_background"
       android:hint="@string/address"
       android:textSize="22sp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="10dp"
       android:paddingStart="15dp"
       android:layout_below="@+id/textAdminAddress"
       />
   <TextView
       android:id="@+id/textAdminCost"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Aylık Ücret :"
       android:layout_below="@+id/textViewBuildDetailBuildAddress"
       android:textSize="13sp"
       android:layout_marginTop="5dp"
       android:layout_marginStart="8dp"
       android:textColor="@color/black"

       />
   <TextView
       android:id="@+id/textViewBuildDetailCost"
       android:layout_width="match_parent"
       android:layout_height="38dp"
       android:textColor="@color/black"
       android:hint="@string/cost"
       android:textSize="22sp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="5dp"
       android:paddingStart="10dp"
       android:paddingTop="3dp"
       android:layout_below="@+id/textAdminCost"
       />
   <TextView
       android:id="@+id/textAdminManger"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Yönetici:"
       android:layout_below="@+id/textViewBuildDetailCost"
       android:textSize="13sp"
       android:layout_marginTop="10dp"
       android:layout_marginStart="8dp"
       android:textColor="@color/black"
       />
   <TextView
       android:id="@+id/textViewBuildDetailManagerName"
       android:layout_width="match_parent"
       android:layout_height="38dp"
       android:hint="@string/manager_name"
       android:textSize="22sp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="5dp"
       android:paddingTop="3dp"
       android:paddingStart="10dp"
       android:layout_below="@+id/textAdminManger"
       />
   <TextView
       android:id="@+id/textAdminManagerPhoneNumber"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Yönetici Telefon Numarası:"
       android:layout_below="@+id/textViewBuildDetailManagerName"
       android:textSize="13sp"
       android:layout_marginTop="5dp"
       android:layout_marginStart="8dp"
       android:textColor="@color/black"
       />

   <TextView
       android:id="@+id/textViewBuildDetailManagerNumber"
       android:layout_width="match_parent"
       android:layout_height="38dp"
       android:layout_below="@+id/textAdminManagerPhoneNumber"
       android:layout_marginStart="10dp"
       android:layout_marginTop="5dp"
       android:layout_marginEnd="33dp"
       android:hint="@string/manager_number"
      android:paddingTop="3dp"
       android:paddingStart="10dp"
       android:textSize="22sp" />

   <TextView
       android:id="@+id/textAdminManagerAddress"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textViewBuildDetailManagerNumber"
       android:layout_marginStart="8dp"
       android:layout_marginTop="5dp"
       android:text="Yönetici Adresi:"
       android:textColor="@color/black"
       android:textSize="13sp" />

   <TextView
       android:id="@+id/textViewBuildDetailManagerAddress"
       android:layout_width="match_parent"
       android:layout_height="38dp"
       android:layout_below="@+id/textAdminManagerAddress"
       android:layout_marginStart="10dp"
       android:layout_marginTop="5dp"
       android:layout_marginEnd="33dp"
       android:hint="@string/manager_address"
       android:paddingStart="10dp"
       android:paddingTop="3dp"
       android:textSize="22sp" />

   <TextView
       android:id="@+id/textAdminEmployeeName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Görevli İsmi:"
       android:layout_below="@+id/textViewBuildDetailManagerAddress"
       android:textSize="13sp"
       android:layout_marginTop="5dp"
       android:layout_marginStart="8dp"
       android:textColor="@color/black"
       />
   <TextView
       android:id="@+id/textViewBuildDetailEmployeeName"
       android:layout_width="match_parent"
       android:layout_height="38dp"
       android:hint="@string/employee_name"
       android:textSize="22sp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="5dp"
       android:paddingStart="10dp"
       android:paddingTop="3dp"
       android:layout_below="@+id/textAdminEmployeeName"
       />
   <TextView
       android:id="@+id/textAdminEmployeeNumber"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Görevli Telefon Numarası:"
       android:layout_below="@+id/textViewBuildDetailEmployeeName"
       android:textSize="13sp"
       android:layout_marginTop="5dp"
       android:layout_marginStart="10dp"
       android:textColor="@color/black"
       />
   <TextView
       android:id="@+id/textViewBuildDetailEmployeeNumber"
       android:layout_width="match_parent"
       android:layout_height="38dp"
       android:hint="@string/employee_number"
       android:textSize="22sp"
       android:layout_marginStart="10dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="5dp"
       android:paddingStart="10dp"
       android:paddingTop="3dp"
       android:layout_below="@+id/textAdminEmployeeNumber"
       />
   <TextView
       android:id="@+id/textAdminContractDate"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Sözleşme Tarihi:"
       android:layout_below="@+id/textViewBuildDetailEmployeeNumber"
       android:textSize="13sp"
       android:layout_marginTop="5dp"
       android:layout_marginStart="8dp"
       android:textColor="@color/black"
       />

   <TextView
       android:id="@+id/textViewBuildDetailContractDate"
       android:layout_width="wrap_content"
       android:layout_height="38dp"
       android:ems="5"
       android:layout_below="@+id/textAdminContractDate"
       android:hint="@string/date_of_contract"
       android:textSize="22sp"
       android:layout_marginStart="10dp"
       android:layout_marginTop="5dp"
       android:paddingTop="3dp"
       android:paddingStart="10dp"
       />

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/buttonDetailToEdit"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textViewBuildDetailContractDate"
       android:background="@drawable/button_background"
       android:text="@string/edit"
       android:layout_marginTop="7dp"
       android:layout_marginBottom="10dp"
       android:layout_marginEnd="20dp"
       android:layout_marginStart="20dp"
       android:drawableStart="@drawable/ic_edit"
       android:paddingStart="20dp"


       />
  </RelativeLayout>
 </ScrollView>
</LinearLayout>
