<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
 <androidx.appcompat.widget.Toolbar
     android:id="@+id/toolbarBuildDetail"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"/>

 <androidx.appcompat.widget.AppCompatButton
     android:id="@+id/buttonMakeService"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="15dp"
     android:layout_marginTop="10dp"
     android:layout_marginEnd="15dp"
     android:text="@string/make_service"
     android:background="@drawable/button_background"/>

 <ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="15dp"
  >
  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      >


   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Apt.İsim:"
       android:textSize="19sp"
       android:layout_marginTop="23dp"
       android:layout_marginStart="8dp"
       />
   <TextView
       android:id="@+id/textViewBuildDetailBuildName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/text_background"
       android:hint="@string/buildName"
       android:textSize="22sp"
       android:layout_marginStart="90dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="20dp"
       android:padding="4dp"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Adres:"
       android:layout_below="@+id/textViewBuildDetailBuildName"
       android:textSize="19sp"
       android:layout_marginTop="20dp"
       android:layout_marginStart="8dp"
       />
   <TextView
       android:id="@+id/textViewBuildDetailBuildAddress"
       android:layout_width="match_parent"
       android:layout_height="120dp"
       android:background="@drawable/text_background"
       android:hint="@string/address"
       android:textSize="22sp"
       android:layout_marginStart="90dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="10dp"
       android:padding="4dp"
       android:layout_below="@+id/textViewBuildDetailBuildName"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Aidat :"
       android:layout_below="@+id/textViewBuildDetailBuildAddress"
       android:textSize="19sp"
       android:layout_marginTop="15dp"
       android:layout_marginStart="8dp"

       />
   <TextView
       android:id="@+id/textViewBuildDetailCost"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/text_background"
       android:hint="@string/cost"
       android:textSize="22sp"
       android:layout_marginStart="90dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="10dp"
       android:padding="4dp"
       android:layout_below="@+id/textViewBuildDetailBuildAddress"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Yönetici:"
       android:layout_below="@+id/textViewBuildDetailCost"
       android:textSize="19sp"
       android:layout_marginTop="15dp"
       android:layout_marginStart="8dp"
       />
   <TextView
       android:id="@+id/textViewBuildDetailManagerName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/text_background"
       android:hint="@string/manager_name"
       android:textSize="22sp"
       android:layout_marginStart="90dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="10dp"
       android:padding="4dp"
       android:layout_below="@+id/textViewBuildDetailCost"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Y.Tel:"
       android:layout_below="@+id/textViewBuildDetailManagerName"
       android:textSize="19sp"
       android:layout_marginTop="15dp"
       android:layout_marginStart="8dp"
       />
   <TextView
       android:id="@+id/textViewBuildDetailManagerNumber"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/text_background"
       android:hint="@string/manager_name_number"
       android:textSize="22sp"
       android:layout_marginStart="90dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="10dp"
       android:padding="4dp"
       android:layout_below="@+id/textViewBuildDetailManagerName"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Y.Adres:"
       android:layout_below="@+id/textViewBuildDetailManagerNumber"
       android:textSize="19sp"
       android:layout_marginTop="15dp"
       android:layout_marginStart="8dp"
       />

   <TextView
       android:id="@+id/textViewBuildDetailManagerAddress"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/text_background"
       android:hint="@string/manager_address"
       android:textSize="22sp"
       android:layout_marginStart="90dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="10dp"
       android:padding="4dp"
       android:layout_below="@+id/textViewBuildDetailManagerNumber"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Gö.İsim:"
       android:layout_below="@+id/textViewBuildDetailManagerAddress"
       android:textSize="19sp"
       android:layout_marginTop="15dp"
       android:layout_marginStart="8dp"
       />
   <TextView
       android:id="@+id/textViewBuildDetailEmployeeName"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/text_background"
       android:hint="@string/employee_name"
       android:textSize="22sp"
       android:layout_marginStart="90dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="10dp"
       android:padding="4dp"
       android:layout_below="@+id/textViewBuildDetailManagerAddress"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Gö.Tel:"
       android:layout_below="@+id/textViewBuildDetailEmployeeName"
       android:textSize="19sp"
       android:layout_marginTop="20dp"
       android:layout_marginStart="8dp"
       />
   <TextView
       android:id="@+id/textViewBuildDetailEmployeeNumber"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/text_background"
       android:hint="@string/employee_number"
       android:textSize="22sp"
       android:layout_marginStart="90dp"
       android:layout_marginEnd="33dp"
       android:layout_marginTop="10dp"
       android:padding="4dp"
       android:layout_below="@+id/textViewBuildDetailEmployeeName"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Söz Tarih:"
       android:layout_below="@+id/textViewBuildDetailEmployeeNumber"
       android:textSize="19sp"
       android:layout_marginTop="15dp"
       android:layout_marginStart="8dp"
       />

   <TextView
       android:id="@+id/textViewBuildDetailContractDate"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:ems="9"
       android:background="@drawable/text_background"
       android:layout_below="@+id/textViewBuildDetailEmployeeNumber"
       android:hint="@string/date_of_contract"
       android:textSize="22sp"
       android:layout_marginStart="120dp"
       android:layout_marginTop="10dp"
       android:padding="4dp"
       />
   <Spinner
       android:id="@+id/spinnerDate"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textViewBuildDetailContractDate"
       android:layout_marginStart="33dp"
       android:layout_marginTop="7dp"

       />
   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/buttonDetailToEdit"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_below="@+id/textViewBuildDetailContractDate"
       android:layout_toEndOf="@+id/spinnerDate"
       android:layout_marginStart="50dp"
       android:background="@drawable/button_background"
       android:text="@string/edit"
       android:layout_marginTop="7dp"
       />


  </RelativeLayout>




 </ScrollView>


</LinearLayout>
